# wendrink-erp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  create_users.py  daily_pnl.py  delete_day.py  docker-compose.prod.yml  docker-compose.yml  fix_users.py  import_excel_menu.py  process_zreport.py  pyproject.toml  requirements.txt  reset_arman.py  reset_stock.py  restore_db.py  start.bat  start.sh  stocktake_reconcile.py  update_ingredients.py  verify.py  wendrink.db  zreport.py  Рецепты.xlsx  продукты  .xlsx  склад .xlsx
.agent/rules/: 00-system-prompt.md  api-standards-lite.md  business-date.md  concurrency.md  corrections.md  decimal-only.md  ledger-architecture.md  negative-stock.md  opex-allocation.md  weighted-average-cost.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_payroll_fields.py  003_add_package_size.py  004_add_stocktake_tables.py  005_add_current_price.py  20260212_1331_857f110d7dec_add_fixed_cost_settings.py  20260228_price_precision.py  20260503_auth_users.py  20260503_reapply_idempotency.py
app/: __init__.py  config.py  database.py  dependencies.py  main.py  seed_data.py
app/api/: __init__.py  analytics.py  auth.py  charts.py  data_import.py  finance.py  health.py  ingredients.py  inventory.py  products.py  recipes.py  reports.py  router.py  sales.py  stocktake.py  verification.py
app/auth/: __init__.py  jwt_tokens.py  passwords.py
app/models/: __init__.py  base.py  finance_ledger.py  ingredient.py  inventory_ledger.py  product.py  recipe.py  sale.py  sale_item.py  stocktake.py  user.py
app/schemas/: __init__.py  (+7 more)
scripts/: backup.sh  docker-entrypoint.sh
tests/: conftest.py  test_auth_utils.py  test_finance.py  test_inventory.py  test_pnl.py  test_sale.py  test_stocktake.py
(+24 files in other folders)
